syntax = "proto3";

package recharge_protocol;

import "google/api/annotations.proto";

service User {
    rpc Register (RegisterRequest) returns (RegisterReply) {
        option (google.api.http) = {
            post: "/register"
            body: "*"
        };
    }
}

message RegisterRequest {
    string phone = 1;
    string email = 2;
    string invite_code = 3;
    string passwd = 4;
}

message RegisterReply {
    int32 status = 1;
    string msg = 2;
    string user_id = 3;
}


service Recharge {
   rpc Recharge (RechargeRequest) returns (RechargeReply) {
       option (google.api.http) = {
            post: "/recharge"
            body: "*"
       };
   }
}   

message RechargeRequest {
    string f_goldin_flow_id = 1;
    string user_id = 2;
    string amount = 3;
}

message RechargeReply {
    int32 status = 1;
    string msg = 2;
}
